// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Artifact Trigger Config Panel  tests Renders/snapshots edit render 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div
          class="Layout--vertical StyledProps--main artifactTriggerConfigContainer StyledProps--padding-xxlarge"
        >
          <h2
            class="heading"
          >
            pipeline.triggers.triggerConfigurationLabel
          </h2>
          <div>
            <div
              class="StyledProps--font StyledProps--main main nameIdDescriptionTags"
            >
              <div
                class="InputWithIdentifier--txtNameContainer TextInput--main"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    ID
                    :
                  </p>
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-editable-text bp3-disabled bp3-editable-text-placeholder InputWithIdentifier--idValue"
                      >
                        <span
                          class="bp3-editable-text-content"
                          style="height: 1px; line-height: 1px; min-width: 0;"
                        />
                      </div>
                    </span>
                  </span>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="name-0"
                >
                  <label
                    class="bp3-label"
                    for="name"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="artifactTriggerConfigPanel_name"
                    >
                      name
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="name"
                        placeholder="common.namePlaceholder"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="StyledProps--font StyledProps--main"
              >
                <label
                  class="Label--main"
                  data-tooltip-id="artifactTrigger_description"
                  style="font-size: 13px; font-weight: normal;"
                >
                  optionalField
                  <span
                    class="bp3-icon bp3-icon-edit StyledProps--main editOpen StyledProps--color StyledProps--color-grey500"
                    data-name="edit"
                    data-testid="description-edit"
                    icon="edit"
                  >
                    <svg
                      data-icon="edit"
                      height="12"
                      viewBox="0 0 16 16"
                      width="12"
                    >
                      <desc>
                        edit
                      </desc>
                      <path
                        d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </label>
              </div>
              <div
                class="StyledProps--font StyledProps--main"
              >
                <label
                  class="Label--main"
                  data-tooltip-id="artifactTrigger_tags"
                  style="font-size: 13px; font-weight: normal;"
                >
                  optionalField
                  <span
                    class="bp3-icon bp3-icon-edit StyledProps--main editOpen StyledProps--color StyledProps--color-grey500"
                    data-name="edit"
                    data-testid="tags-edit"
                    icon="edit"
                  >
                    <svg
                      data-icon="edit"
                      height="12"
                      viewBox="0 0 16 16"
                      width="12"
                    >
                      <desc>
                        edit
                      </desc>
                      <path
                        d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </label>
              </div>
            </div>
            <h2
              class="StyledProps--font StyledProps--font-h2 StyledProps--main listenOnNewWebhook"
              level="2"
            >
              pipeline.triggers.artifactTriggerConfigPanel.listenOnNewArtifact
            </h2>
            <section>
              <div
                class="StyledProps--font StyledProps--main"
                style="display: inline-block; width: 100%;"
              >
                <div
                  class="table appliedArtifact"
                >
                  <div
                    class="header"
                    role="row"
                  >
                    <div
                      class="cell"
                      colspan="1"
                      role="columnheader"
                      style="width: 45%;"
                    >
                      MANIFESTSTEXT
                    </div>
                    <div
                      class="cell"
                      colspan="1"
                      role="columnheader"
                      style="width: 25%;"
                    >
                      PIPELINE.TRIGGERS.ARTIFACTTRIGGERCONFIGPANEL.ARTIFACTREPOSITORY
                    </div>
                    <div
                      class="cell"
                      colspan="1"
                      role="columnheader"
                      style="width: 18%;"
                    >
                      COMMON.LOCATION
                    </div>
                    <div
                      class="cell"
                      colspan="1"
                      role="columnheader"
                      style="width: 10%;"
                    >
                       
                    </div>
                  </div>
                  <div
                    class="body"
                  >
                    <div
                      class="row card clickable"
                      role="row"
                    >
                      <div
                        class="cell"
                        role="cell"
                        style="width: 45%;"
                      >
                        <div
                          class="Layout--horizontal StyledProps--main"
                        >
                          <p
                            class="StyledProps--font Text--lineclamp StyledProps--main"
                            style="--text-line-clamp: 1; width: 296px;"
                          >
                            stage: s3manifestid
                          </p>
                        </div>
                      </div>
                      <div
                        class="cell"
                        role="cell"
                        style="width: 25%;"
                      >
                        <div
                          class="Layout--horizontal StyledProps--main"
                        >
                          <p
                            class="StyledProps--font Text--lineclamp StyledProps--main"
                            style="--text-line-clamp: 1; width: 159px;"
                          >
                            pipeline.triggers.artifactTriggerConfigPanel.runtimeInput
                          </p>
                        </div>
                      </div>
                      <div
                        class="cell"
                        role="cell"
                        style="width: 18%;"
                      >
                        <div
                          class="Layout--horizontal StyledProps--main"
                        >
                          <p
                            class="StyledProps--font Text--lineclamp StyledProps--main"
                            style="min-height: 18px; --text-line-clamp: 1; width: 110px;"
                          >
                            chartPath
                          </p>
                        </div>
                      </div>
                      <div
                        class="cell"
                        role="cell"
                        style="width: 10%;"
                      >
                        <div
                          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                          style="justify-content: center;"
                        >
                          <button
                            class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                            type="button"
                          >
                            <span
                              class="bp3-icon bp3-icon-edit StyledProps--main"
                              icon="edit"
                            >
                              <svg
                                data-icon="edit"
                                height="16"
                                viewBox="0 0 16 16"
                                width="16"
                              >
                                <desc>
                                  edit
                                </desc>
                                <path
                                  d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <button
                  class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                  data-name="main-delete"
                  style="display: inline-block;"
                  type="button"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="main-trash"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 11 14"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M10.3.7H6.9c0-.4-.3-.7-.7-.7H4.8c-.4 0-.7.3-.7.7H.7C.3.7 0 1 0 1.4v.7h11v-.7c0-.4-.3-.7-.7-.7zm.4 2.1H.3c-.1 0-.3.2-.3.4s.2.3.3.3h.3v9.8c.1.4.4.7.8.7h8.2c.4 0 .7-.3.7-.7V3.5h.3c.2 0 .3-.2.3-.3.1-.2-.1-.4-.2-.4zm-7.3 8.4c0 .4-.3.7-.7.7s-.7-.3-.7-.7V5.6c0-.4.3-.7.7-.7s.7.3.7.7zm2.8 0c0 .4-.3.7-.7.7s-.7-.3-.7-.7V5.6c0-.4.3-.7.7-.7s.7.3.7.7zm2.7 0c0 .4-.3.7-.7.7s-.7-.3-.7-.7V5.6c0-.4.3-.7.7-.7s.7.3.7.7z"
                        fill="#4d5969"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </section>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Artifact Trigger Config Panel  tests Renders/snapshots inital Render 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div
          class="Layout--vertical StyledProps--main artifactTriggerConfigContainer StyledProps--padding-xxlarge"
        >
          <h2
            class="heading"
          >
            pipeline.triggers.triggerConfigurationLabel: pipeline.triggers.onNewArtifactTitle
          </h2>
          <div>
            <div
              class="StyledProps--font StyledProps--main main nameIdDescriptionTags"
            >
              <div
                class="InputWithIdentifier--txtNameContainer TextInput--main"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    ID
                    :
                  </p>
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                        tabindex="0"
                      >
                        <span
                          class="bp3-editable-text-content"
                          style="height: 1px; line-height: 1px; min-width: 0;"
                        />
                      </div>
                    </span>
                  </span>
                  <span
                    class="bp3-icon bp3-icon-edit StyledProps--main"
                    icon="edit"
                    style="vertical-align: middle; cursor: pointer;"
                  >
                    <svg
                      data-icon="edit"
                      height="12"
                      viewBox="0 0 16 16"
                      width="12"
                    >
                      <desc>
                        edit
                      </desc>
                      <path
                        d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="name-0"
                >
                  <label
                    class="bp3-label"
                    for="name"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="artifactTriggerConfigPanel_name"
                    >
                      name
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="name"
                        placeholder="common.namePlaceholder"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="StyledProps--font StyledProps--main"
              >
                <label
                  class="Label--main"
                  data-tooltip-id="artifactTrigger_description"
                  style="font-size: 13px; font-weight: normal;"
                >
                  optionalField
                  <span
                    class="bp3-icon bp3-icon-edit StyledProps--main editOpen StyledProps--color StyledProps--color-grey500"
                    data-name="edit"
                    data-testid="description-edit"
                    icon="edit"
                  >
                    <svg
                      data-icon="edit"
                      height="12"
                      viewBox="0 0 16 16"
                      width="12"
                    >
                      <desc>
                        edit
                      </desc>
                      <path
                        d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </label>
              </div>
              <div
                class="StyledProps--font StyledProps--main"
              >
                <label
                  class="Label--main"
                  data-tooltip-id="artifactTrigger_tags"
                  style="font-size: 13px; font-weight: normal;"
                >
                  optionalField
                  <span
                    class="bp3-icon bp3-icon-edit StyledProps--main editOpen StyledProps--color StyledProps--color-grey500"
                    data-name="edit"
                    data-testid="tags-edit"
                    icon="edit"
                  >
                    <svg
                      data-icon="edit"
                      height="12"
                      viewBox="0 0 16 16"
                      width="12"
                    >
                      <desc>
                        edit
                      </desc>
                      <path
                        d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </label>
              </div>
            </div>
            <h2
              class="StyledProps--font StyledProps--font-h2 StyledProps--main listenOnNewWebhook"
              level="2"
            >
              pipeline.triggers.artifactTriggerConfigPanel.listenOnNewArtifact
            </h2>
            <section>
              <label
                class="Label--main"
                style="font-size: 13px; font-weight: normal;"
              >
                manifestsText
              </label>
              <p
                class="StyledProps--font StyledProps--main"
                data-name="plusAdd"
                style="cursor: pointer; width: 130px;"
              >
                pipeline.triggers.artifactTriggerConfigPanel.plusSelect
              </p>
            </section>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;
